# ExamenParcial3-MiguelGodoy-RobertoCardenas

./: CMakeLists.txt  README.md
C++/: estudiante.cpp  estudiante.h  main.cpp  main.h
Ejercicio en C/: estudiante.c  estudiante.h  main.c  main.h
